<resources>
    <string name="app_name">Notes</string>
    <string name="title_settings">Настройки</string>
    <string name="fragment_login_button_close">Закрыть</string>
    <string name="fragment_login_button_sign_up">Регистрация</string>
    <string name="fragment_login_button_sign_in">Войти</string>
    <string name="fragment_login_text_view_forgot_password">Забыли пароль?</string>
    <string name="fragment_login_hint_enter_password">Введите пароль</string>
    <string name="fragment_login_hint_enter_email">Введите адрес электронной почты</string>
    <string name="fragment_login_label_email">Адрес электронной почты</string>
    <string name="fragment_login_title_authorization">Авторизация</string>

    <string name="fragment_forgot_password_text_view_information">На введённый электронный адрес будет отправлена ссылка для сброса пароля</string>
    <string name="action_close">Закрыть</string>
    <string name="action_send">Отправить</string>
    <string name="fragment_forgot_password_title_password_recovery">Восстановление пароля</string>
    <string name="fragment_forgot_password_information_text_letter_send">Письмо для подтверждения отправлено на указанную почту</string>
    <string name="fragment_forgot_password_information_text_enter_email">Введите адрес электронной почты</string>
    <string name="fragment_forgot_password_information_text_enter_correct_email">Введите корректный адрес электронной почты</string>
    <string name="fragment_login_dialog_information_text_all_fields_must_be_filled">Все поля должны быть заполнены корректно.</string>
    <string name="fragment_login_dialog_information_text_you_are_logged_in_as">"%1s\n%2s"</string>
    <string name="fragment_login_dialog_information_text_you_are_not_logged_in">Вы не вошли в свой аккаунт</string>
    <string name="fragment_login_dialog_error_text_no_internet_connection">Нет соединения с интернетом</string>
    <string name="fragment_login_dialog_error_text_user_not_registered">Пользователь с таким адресом электронной почты не зарегистрирован.</string>
    <string name="fragment_login_dialog_error_text_invalid_email_or_password">Неверный адрес электронной почты или пароль</string>
    <string name="fragment_signed_title_profile">Профиль</string>
    <string name="fragment_editor_hint_title_note">Заголовок заметки</string>
    <string name="nav_header_text_view_sign_in"><b><u>Войти</u></b></string>
    <string name="nav_header_text_view_sign_out"><b><u>Выйти</u></b></string>
    <string name="nav_header_text_view_profile_settings"><b><u>Настройки профиля</u></b></string>
    <string name="night_mode">Ночная тема</string>
    <string name="activity_main_content_description_floating_action_button">Добавить заметку</string>

    <string-array name="title_note_font_size">
        <item>Очень маленький</item>
        <item>Маленький</item>
        <item>Средний</item>
        <item>Большой</item>
        <item>Очень большой</item>
    </string-array>

    <string-array name="title_note_font_size_values">
        <item>10</item>
        <item>14</item>
        <item>18</item>
        <item>22</item>
        <item>30</item>
    </string-array>

    <string-array name="content_note_font_size">
        <item>Очень маленький</item>
        <item>Маленький</item>
        <item>Средний</item>
        <item>Большой</item>
        <item>Очень большой</item>
    </string-array>

    <string-array name="content_note_font_size_values">
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>28</item>
    </string-array>

    <string name="fragment_editor_content_note_hint">Текст заметки</string>
    <string name="fragment_editor_content_task_hint">Текст задачи</string>
    <string name="fragment_editor_content_description_done_button">Кнопка сохранить заметку</string>
    <string name="fragment_editor_content_description_edit_note_button">Кнопка редактировать заметку</string>
    <string name="date_time_format_pattern">HH:mm dd MMMM yyyy</string>
    <string name="fragment_notes_select_all_notes">Выбрать все заметки</string>
    <string name="fragment_tasks_select_all_tasks">Выбрать все задачи</string>
    <string name="editor_notes_fragment_cannot_save_empty_note">Нельзя сохранить пустую заметку</string>
    <string name="editor_tasks_fragment_cannot_save_empty_task">Нельзя сохранить пустую задачу</string>
    <string name="editor_notes_fragment_note_updated">Заметка обновлена</string>
    <string name="editor_tasks_fragment_task_updated">Задача обновлена</string>
    <string name="editor_notes_fragment_note_saved">Заметка сохранена</string>
    <string name="editor_tasks_fragment_task_saved">Задача сохранена</string>
    <string name="notes_fragment_title_delete_note">Удаление заметки</string>
    <string name="tasks_fragment_title_delete_task">Удаление задачи</string>
    <string name="notes_fragment_question_delete_note">Вы действительно хотите удалить заметку?</string>
    <string name="tasks_fragment_question_delete_task">Вы действительно хотите удалить задачу?</string>
    <string name="positive_button_text">Да</string>
    <string name="negative_button_text">Нет</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_tablayout_note">Заметки</string>
    <string name="main_fragment_tablayout_task">Задачи</string>
    <string name="fragment_editor_tasks_set_a_reminder">Установить напоминание</string>
    <string name="reminder_is_set_to">Напоминание установлено на %s</string>
    <string name="content_title_for_notification">Напоминание о задаче</string>
    <string name="search_notes_fragment_search_hint">Введите текст для поиска заметки</string>
    <string name="search_notes_view_holder_date_pattern">HH:mm dd MMMM yyyy</string>

</resources>