<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="32dp"
    android:padding="16dp"
    android:elevation="3dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8x"
        android:layout_marginBottom="@dimen/margin_16x"
        android:fontFamily="@font/roboto_mono_bold"
        android:gravity="center"
        android:text="@string/fragment_forgot_password_title_password_recovery"
        android:textSize="@dimen/text_size_24x"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_login_you_enter_how"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        tools:text="Вы вошли как s_sv3006@mail.ru"
        />

    <Button
        android:id="@+id/fragment_login_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8x"
        android:layout_marginTop="@dimen/margin_8x"
        android:visibility="gone"
        android:text="Выйти"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8x"
        android:layout_marginTop="@dimen/margin_8x"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/fragment_login_label_email"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/fragment_forgot_password_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="@dimen/text_size_14x"
        android:layout_marginHorizontal="@dimen/margin_8x"
        android:hint="@string/fragment_login_hint_enter_email"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/fragment_forgot_password_text_view_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8x"
        android:layout_marginTop="@dimen/margin_16x"
        android:fontFamily="@font/roboto_mono_bold"
        android:lines="3"
        android:maxLines="3"
        android:textColor="#FF0000"
        android:textSize="@dimen/text_size_12x"
        android:textStyle="bold"
        android:text="@string/fragment_forgot_password_text_view_information"
        tools:visibility="visible"
        />

    <Button
        android:id="@+id/fragment_forgot_password_button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32x"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/action_send"
        />

    <Button
        android:id="@+id/fragment_forgot_password_button_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32x"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/action_close"
        />

</LinearLayout>