<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="32dp"
    android:padding="16dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8x"
        android:layout_marginBottom="@dimen/margin_16x"
        android:fontFamily="@font/roboto_mono_bold"
        android:gravity="center"
        android:text="@string/fragment_login_title_authorization"
        android:textSize="@dimen/text_size_24x"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_login_you_enter_how"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        tools:text="Вы вошли как s_sv3006@mail.ru"
        />

    <Button
        android:id="@+id/fragment_login_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8x"
        android:layout_marginTop="@dimen/margin_8x"
        android:visibility="gone"
        android:text="Выйти"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/margin_8x"
        android:layout_marginTop="@dimen/margin_8x">
        <EditText
            android:id="@+id/fragment_login_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/text_size_14x"
            android:layout_marginHorizontal="@dimen/margin_8x"
            android:hint="@string/fragment_login_hint_enter_email"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/margin_8x"
        android:layout_marginTop="@dimen/margin_8x">
        <EditText
            android:id="@+id/fragment_login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/text_size_14x"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/fragment_login_hint_enter_password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fragment_login_text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/margin_8x"
        android:fontFamily="@font/roboto_mono"
        android:paddingTop="@dimen/margin_8x"
        android:text="@string/fragment_login_text_view_forgot_password"
        tools:text="Забыли пароль?"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/fragment_login_text_view_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8x"
        android:layout_marginTop="@dimen/margin_16x"
        android:fontFamily="@font/roboto_mono_bold"
        android:lines="3"
        android:maxLines="3"
        android:textColor="#FF0000"
        android:textSize="@dimen/text_size_12x"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:text="Пользователь с таким адресом уже зарегистрирован"
        tools:visibility="visible"
        />

    <Button
        android:id="@+id/fragment_login_button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32x"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/fragment_login_button_sign_in"
        />

    <Button
        android:id="@+id/fragment_login_button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32x"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/fragment_login_button_sign_up"
        />

    <Button
        android:id="@+id/fragment_login_button_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32x"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/fragment_login_button_close"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/fragment_login_button_google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32x"
        />

</LinearLayout>