<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="end"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/fragment_editor_edit_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/ic_edit"
                android:contentDescription="@string/fragment_editor_content_description_edit_note_button"
                />

            <ImageView
                android:id="@+id/fragment_editor_apply_changed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/ic_done"
                android:contentDescription="@string/fragment_editor_content_description_done_button"
                />
        </LinearLayout>

        <kz.stepanenkos.notes.common.presentation.TitleEditText
            android:id="@+id/fragment_editor_title_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_text"
            android:textColor="@color/primaryTextColor"
            android:hint="@string/fragment_editor_hint_title_note"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:autoLink="all"
            android:focusableInTouchMode="true"
            android:singleLine="true"

            />

        <kz.stepanenkos.notes.common.presentation.ContentEditText
            android:id="@+id/fragment_editor_content_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="start|top"
            android:textColor="@color/primaryTextColor"
            android:hint="@string/fragment_editor_content_note_hint"
            android:inputType="textMultiLine|textWebEditText"
            android:padding="8dp"
            android:autoLink="all"
            android:focusableInTouchMode="true"
            android:textAlignment="viewStart"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>