<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/card_elevation_8x"
    app:cardElevation="@dimen/card_elevation_8x"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8x"
            android:gravity="end"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/fragment_editor_tasks_edit_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8x"
                android:clickable="true"
                android:contentDescription="@string/fragment_editor_content_description_edit_note_button"
                android:focusable="true"
                android:padding="@dimen/padding_8x"
                android:src="@drawable/ic_edit"
                />

            <ImageView
                android:id="@+id/fragment_editor_tasks_apply_changed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8x"
                android:clickable="true"
                android:contentDescription="@string/fragment_editor_content_description_done_button"
                android:focusable="true"
                android:padding="@dimen/padding_8x"
                android:src="@drawable/ic_done"
                />
        </LinearLayout>

        <kz.stepanenkos.notes.common.presentation.ContentEditText
            android:id="@+id/fragment_editor_content_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8x"
            android:autoLink="all"
            android:background="@drawable/bg_edit_text"
            android:focusableInTouchMode="true"
            android:gravity="start|top"
            android:hint="@string/fragment_editor_content_note_hint"
            android:inputType="textMultiLine|textWebEditText"
            android:lines="4"
            android:maxLines="4"
            android:padding="@dimen/padding_8x"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>